# imageResizerService

./: .coverage 2  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  configs.py  errors.py
app/db/: __init__.py  schemas.py
app/routers/: tasks.py
app/services/: images.py  tasks.py
tests/app/: conftest.py  test_api.py  test_services.py
